# trio

./: AppOCRScraper.d  AppOCRScraper.swiftdeps  AppOCRScraper.swiftdeps~  AppStore.d  AppStore.swiftdeps  AppStore.swiftdeps~  ChatworkConnector.d  ChatworkConnector.swiftdeps  ChatworkConnector.swiftdeps~  ClaudeBatcher.d  ClaudeBatcher.swiftdeps  ClaudeBatcher.swiftdeps~  CloudSync.d  CloudSync.swiftdeps  CloudSync.swiftdeps~  Dispatcher.d  Dispatcher.swiftdeps  Dispatcher.swiftdeps~  LINEScraper.d  LINEScraper.swiftdeps  LINEScraper.swiftdeps~  NotificationDBReader.d  NotificationDBReader.swiftdeps  NotificationDBReader.swiftdeps~  OnboardingView.d  OnboardingView.swiftdeps  OnboardingView.swiftdeps~  Package.swift  ReplyPlanner.d  ReplyPlanner.swiftdeps  ReplyPlanner.swiftdeps~  ReplyPlannerSheet.d  ReplyPlannerSheet.swiftdeps  ReplyPlannerSheet.swiftdeps~  ServerRelay.d  ServerRelay.swiftdeps  ServerRelay.swiftdeps~  Settings.d  Settings.swiftdeps  Settings.swiftdeps~  (+22 more)
Sources/Trio/: TrioApp.swift
Sources/Trio/Connectors/: AppOCRScraper.swift  ChatworkConnector.swift  LINEScraper.swift  NotificationDBReader.swift  SlackConnector.swift
Sources/Trio/Dispatcher/: Dispatcher.swift
Trio.app/Contents/: Info.plist
legal/: privacy.md  terms.md
pkg-resources/: conclusion.html  welcome.html
scripts/: ax_probe.swift  build_dmg.sh  entitlements.plist  gen_icon.swift  make_app_bundle.sh  ocr_probe.swift  ocr_v2.swift
server/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
server/.github/workflows/: deploy.yml
server/src/: main.rs
tasks/: todo.md
(+14 files in other folders)
